[gd_scene load_steps=13 format=3 uid="uid://caf5bpetmv4kt"]

[ext_resource type="Script" path="res://characters/enemies/monster.gd" id="1_6yeva"]
[ext_resource type="PackedScene" uid="uid://c1mtqpil7ainc" path="res://characters/health_manager.tscn" id="2_ncj48"]
[ext_resource type="AudioStream" uid="uid://0hfe5r8my57p" path="res://sfx/monster/monster die.wav" id="3_wgv2s"]
[ext_resource type="Script" path="res://sfx/play_random_sound.gd" id="4_diq82"]
[ext_resource type="AudioStream" uid="uid://cn85hwrqkngx4" path="res://sfx/monster/monster hurt.wav" id="4_iytrt"]
[ext_resource type="PackedScene" uid="uid://5n1spsypc1li" path="res://characters/vision_manager.tscn" id="4_wohwx"]
[ext_resource type="PackedScene" uid="uid://c1t1o0gsjidvi" path="res://characters/enemies/ai_character_mover.tscn" id="5_mtl1t"]
[ext_resource type="PackedScene" uid="uid://c5wg4gnyejteh" path="res://weapons/bullet_emitters/bullet_emitter.tscn" id="6_qdsoo"]
[ext_resource type="AudioStream" uid="uid://bv16dppf6d81h" path="res://sfx/monster/monster alert.wav" id="9_2214d"]
[ext_resource type="AudioStream" uid="uid://bsvybcwwmdhc8" path="res://sfx/monster/monster attack.wav" id="10_7b3hc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8f1j0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_phqto"]
radius = 15.0

[node name="Monster" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_6yeva")

[node name="HealthManager" parent="." instance=ExtResource("2_ncj48")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2109, 0)

[node name="DieSound" type="AudioStreamPlayer3D" parent="HealthManager"]
stream = ExtResource("3_wgv2s")
bus = &"Sfx"

[node name="HurtSound" type="Node3D" parent="HealthManager"]
script = ExtResource("4_diq82")

[node name="HurtSound" type="AudioStreamPlayer3D" parent="HealthManager/HurtSound"]
stream = ExtResource("4_iytrt")
pitch_scale = 0.9
bus = &"Sfx"

[node name="HurtSound2" type="AudioStreamPlayer3D" parent="HealthManager/HurtSound"]
stream = ExtResource("4_iytrt")
bus = &"Sfx"

[node name="HurtSound3" type="AudioStreamPlayer3D" parent="HealthManager/HurtSound"]
stream = ExtResource("4_iytrt")
pitch_scale = 1.1
bus = &"Sfx"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_8f1j0")

[node name="Graphics" type="Node3D" parent="."]

[node name="VisionManager" parent="." instance=ExtResource("4_wohwx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.52008, 0)

[node name="NearbyMonstersAlertArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="NearbyMonstersAlertArea"]
shape = SubResource("SphereShape3D_phqto")

[node name="AICharacterMover" parent="." instance=ExtResource("5_mtl1t")]

[node name="AttackEmitter" parent="." instance=ExtResource("6_qdsoo")]

[node name="AlertSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_2214d")
bus = &"Sfx"

[node name="AttackSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("10_7b3hc")
bus = &"Sfx"
